--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -1,6 +1,6 @@
  * {
     font-weight: 700;
-    font-family: SF Pro Text, sans-serif;
+    font-family: "SF Pro Text";
     font-size: 12px;
   }
   
