replace alacrity with termite + sway fonts

--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -1,6 +1,6 @@
  * {
     font-weight: 700;
-    font-family: "SF Pro Text";
+    font-family: "MesloLGS NF Regular";
     font-size: 12px;
   }
   
