remove material icons (vscode) + apparmor + firejail + tlp + install yay

--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -1,6 +1,6 @@
  * {
     font-weight: 700;
-    font-family: "MesloLGS NF Regular";
+    font-family: "Fira Code Retina";
     font-size: 12px;
   }
   
