more misc fixes

--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -30,7 +30,7 @@
   
   #workspaces button.focused {
     color: #ffffff;
-    border-bottom: 1px solid transparent;
+    font-weight: bold;
   }
   
   #waybar.ayu-mirage #workspaces button.focused {
