--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -1,7 +1,7 @@
  * {
     font-weight: 700;
-    font-family: "Iosevka Nerd Font Regular";
-    font-size: 11px;
+    font-family: "MesloLGS NF Regular";
+    font-size: 10px;
   }
   
   #waybar {
