--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -1,6 +1,6 @@
  * {
     font-weight: 700;
-    font-family: "MesloLGS NF Regular";
+    font-family: "San Francisco Pro Regular";
     font-size: 10px;
   }
   
